pkg/kgateway/translator/gateway/testutils/outputs/traffic-policy/fail-open.yaml
Clusters:
- commonLbConfig:
    zoneAwareLbConfig:
      routingEnabled: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_infra_example-svc_80
  type: EDS
- commonLbConfig:
    zoneAwareLbConfig:
      routingEnabled: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_infra_ratelimit_8081
  type: EDS
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      explicitHttpConfig:
        http2ProtocolOptions: {}
- connectTimeout: 5s
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 443
  filterChains:
  - filterChainMatch:
      serverNames:
      - tls.example.com
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: tls1
        statPrefix: http
        useRemoteAddress: true
    name: tls1
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - h2
          - http/1.1
          tlsCertificates:
          - certificateChain:
              inlineBytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVQVENDQWlXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVFvd0NBWURWUVFEREFFcU1RMHcKQ3dZRFZRUUtEQVJ5YjI5ME1CNFhEVEl6TVRFd09ERTJORFExTjFvWERUTXpNVEV3TlRFMk5EUTFOMW93SGpFSwpNQWdHQTFVRUF3d0JLakVRTUE0R0ExVUVDZ3dIWjJGMFpYZGhlVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTit0V2hoa3QvNVFQTUw4UGorZ1JScUM1blp5TG9Sem5iK3hPazdQTVozRndtYUcKNThvbVhPRm16ZmJlK0VaaGE0UlBhK1BpdFhFbitjZkM5allYRU42dGM1WExWUjlKK1dCRXRhSUpoZlh2VzAvbgpra [...]
            privateKey:
              inlineBytes: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRRGZyVm9ZWkxmK1VEekMKL0Q0L29FVWFndVoyY2k2RWM1Mi9zVHBPenpHZHhjSm1odWZLSmx6aFpzMzIzdmhHWVd1RVQydmo0clZ4Si9uSAp3dlkyRnhEZXJYT1Z5MVVmU2ZsZ1JMV2lDWVgxNzF0UDU1SVIrTldtSkhBUUV0aXg3a3NzV0lNRXd5eHR1ZlMxCkxrUkRyaFNGNW1CU0lYbm51czFzRU5jdUVmZVZ1SVUyclB5RlRxVzVKcHZ0dHhWQWsreE8vKzk3UTE4QWxvc3gKdTBidG9HYjR2NXZoVUZBUVgyamk1Yk0wLzA3S2VkTUczbkI2bktFNW16R0FZbC9lUXoxekpJSUlmZDA3NTZWYQpDb [...]
          tlsParams: {}
  - filterChainMatch:
      serverNames:
      - no-ratelimit-tls.example.com
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: ratelimit/infra/fail-open-ratelimit
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
            domain: api-gateway-fail-open
            rateLimitService:
              grpcService:
                envoyGrpc:
                  clusterName: kube_infra_ratelimit_8081
              transportApiVersion: V3
            timeout: 0.150s
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: tls2
        statPrefix: http
        useRemoteAddress: true
    name: tls2
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - h2
          - http/1.1
          tlsCertificates:
          - certificateChain:
              inlineBytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVQVENDQWlXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVFvd0NBWURWUVFEREFFcU1RMHcKQ3dZRFZRUUtEQVJ5YjI5ME1CNFhEVEl6TVRFd09ERTJORFExTjFvWERUTXpNVEV3TlRFMk5EUTFOMW93SGpFSwpNQWdHQTFVRUF3d0JLakVRTUE0R0ExVUVDZ3dIWjJGMFpYZGhlVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTit0V2hoa3QvNVFQTUw4UGorZ1JScUM1blp5TG9Sem5iK3hPazdQTVozRndtYUcKNThvbVhPRm16ZmJlK0VaaGE0UlBhK1BpdFhFbitjZkM5allYRU42dGM1WExWUjlKK1dCRXRhSUpoZlh2VzAvbgpra [...]
            privateKey:
              inlineBytes: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRRGZyVm9ZWkxmK1VEekMKL0Q0L29FVWFndVoyY2k2RWM1Mi9zVHBPenpHZHhjSm1odWZLSmx6aFpzMzIzdmhHWVd1RVQydmo0clZ4Si9uSAp3dlkyRnhEZXJYT1Z5MVVmU2ZsZ1JMV2lDWVgxNzF0UDU1SVIrTldtSkhBUUV0aXg3a3NzV0lNRXd5eHR1ZlMxCkxrUkRyaFNGNW1CU0lYbm51czFzRU5jdUVmZVZ1SVUyclB5RlRxVzVKcHZ0dHhWQWsreE8vKzk3UTE4QWxvc3gKdTBidG9HYjR2NXZoVUZBUVgyamk1Yk0wLzA3S2VkTUczbkI2bktFNW16R0FZbC9lUXoxekpJSUlmZDA3NTZWYQpDb [...]
          tlsParams: {}
  listenerFilters:
  - name: envoy.filters.listener.tls_inspector
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
  name: listener~443
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 80
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~80
        statPrefix: http
        useRemoteAddress: true
    name: listener~80
  name: listener~80
Routes:
- ignorePortInHostMatching: true
  name: listener~80
  virtualHosts:
  - domains:
    - example.com
    name: listener~80~example_com
    routes:
    - match:
        pathSeparatedPrefix: /example-route
      name: listener~80~example_com-route-0-httproute-example-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
  - domains:
    - no-ratelimit.example.com
    name: listener~80~no-ratelimit_example_com
    routes:
    - match:
        pathSeparatedPrefix: /example-route-no-ratelimit
      name: listener~80~no-ratelimit_example_com-route-0-httproute-example-route-no-ratelimit-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
- ignorePortInHostMatching: true
  name: tls1
  virtualHosts:
  - domains:
    - tls.example.com
    name: tls1~tls_example_com
    requireTls: ALL
    routes:
    - directResponse:
        body:
          inlineString: invalid route configuration detected and replaced with a direct
            response.
        status: 500
      match:
        pathSeparatedPrefix: /example-route-tls-extension-ref
      name: tls1~tls_example_com-route-0-httproute-example-tls-route-extension-ref-infra-1-0-matcher-0
    - match:
        pathSeparatedPrefix: /example-route-tls-section-name
      name: tls1~tls_example_com-route-1-httproute-example-tls-route-extension-ref-infra-0-0-route-name-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /example-tls-sibling-route
      name: tls1~tls_example_com-route-2-httproute-example-tls-sibling-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /example-tls-route
      name: tls1~tls_example_com-route-3-httproute-example-tls-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        rateLimit.global:
        - gateway.kgateway.dev/TrafficPolicy/infra/ratelimit-fail-open
  name: tls2
  typedPerFilterConfig:
    ratelimit/infra/fail-open-ratelimit:
      '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
      rateLimits:
      - actions:
        - remoteAddress: {}
  virtualHosts:
  - domains:
    - no-ratelimit-tls.example.com
    name: tls2~no-ratelimit-tls_example_com
    requireTls: ALL
    routes:
    - match:
        pathSeparatedPrefix: /example-route-tls-no-ratelimit
      name: tls2~no-ratelimit-tls_example_com-route-0-httproute-example-tls-route-no-ratelimit-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
Statuses:
  gateways:
    infra/example-gateway:
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Successfully resolved all Gateway references
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http1
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http2
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
      - attachedRoutes: 3
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: tls1
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: tls2
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    infra/example-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    infra/example-route-no-ratelimit:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    infra/example-tls-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    infra/example-tls-route-extension-ref:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: 'Replaced Rule (0): gateway.kgateway.dev/TrafficPolicy/infra/ratelimit-for-extension-ref:
            policy not found'
          reason: RouteRuleReplaced
          status: "False"
          type: kgateway.dev/Programmed
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    infra/example-tls-route-no-ratelimit:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
    infra/example-tls-sibling-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  policies:
    TrafficPolicy/infra/ratelimit-fail-open:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: infra
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
